# printfiles

./: CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  TASK.md
src/: main.rs
tests/: cli.rs
