[package]
name = "printfiles"
version = "0.1.0"
edition = "2021"
authors = ["Dong Jinghua"]
description = "Print files matched by globs or directories with headers"
license = "MIT"
repository = "https://github.com/dongjinghua/printfiles"
keywords = ["cli", "files", "glob", "text"]
categories = ["command-line-utilities"]
rust-version = "1.70"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
globwalk = "0.9"
which = "6.0"
