[package]
name = "printfiles"
version = "0.1.0"
edition = "2021"
authors = ["Dong Jinghua"]
description = "Print files matched by globs or directories with headers"
license = "MIT"
repository = "https://github.com/dongjinghua/printfiles"
keywords = ["cli", "files", "glob", "text"]
categories = ["command-line-utilities"]
rust-version = "1.70"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
globwalk = "0.9"
which = "6.0"
base64 = "0.22"
hex = "0.4"
chardetng = "0.1"
encoding_rs = "0.8"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
